<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="statusbar_notifications">Notifications</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="installer">Installer</string>
    <string name="active_display">Active Display</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="title_hardware_keys">Hardware Keys</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_notifications">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="header_summary_hardware_keys">@null</string>
    <string name="header_summary_activedisplay">@null</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on longpress</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="about_aokp">About Hackdroid</string>
    <string name="about_aokp_summary">@null</string>
    <string name="bootani_cat">Boot animation</string>
    <string name="navbar_cat">NavBar</string>
    <string name="display_cat">Display</string>
    <string name="recents_cat">Recents</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from storage to use as your new boot animation</string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="system_power_crt_screen_off_title">CRT screen off</string>
    <string name="system_power_crt_screen_off_summary">Screen will animate an Electron Beam when turned off</string>
    <string name="system_power_crt_mode_title">CRT animation mode</string>
    <string name="system_power_crt_mode_dialog_title">Show CRT animation</string>
    <string name="rotate_180_title">Allow 180-degree rotation</string>
    <string name="rotate_180_summary">Checking this allows your device to rotate upside down</string>
    <string name="rotate_270_title">Allow 270-degree rotation</string>
    <string name="rotate_270_summary">Checking this allows your device to rotate to the right</string>
    <string name="recent_kill_all">Enable Kill-All button</string>
    <string name="recent_kill_all_summary">Displays a button that kills all apps in the Recent Apps window</string>
    <string name="recent_google_assist_title">Enable Google Now button</string>
    <string name="recent_google_assist_summary">Displays a button to launch Google Now in the Recent Apps window</string>
    <string name="ram_bar">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the Recent Apps window</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some SystemBar items e.g. the Compatibility Mode button</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="multipane_ui_summary">Checking this will enable the Dual Panel (Tablet) UI used by certain apps</string>
    <string name="show_overflow_title">Show Menu UI overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on</string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">Choose the style of the NavBar and Statusbar</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="dark_ui">Dark AOKP</string>
    <string name="navbar_hide">NavBar Hide Options</string>
    <string name="navbar_button_cat">Navigation Bar buttons</string>
    <string name="navbar_color_cat">Colors and Transparency</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Menu buttons can be rearranged or hidden here (in case you are using the Big Menu button)</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">Define how and when you want the menu buttons to appear</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="navbar_width_help_title">NavBar combined width help</string>
    <string name="navbar_width_help_summary" formatted="false">100 is 70% of screen width, 5 is 30% of screen width. 0 will default to per button width.</string>
    <string name="width_port_title">CombinedBar width port</string>
    <string name="width_land_title">CombinedBar width land</string>
    <string name="navbar_widgets">Navigation Bar Widgets</string>
    <string name="navbar_enable_bar">Enable bar</string>
    <string name="navigation_bar_height_title">Navigation Bar height</string>
    <string name="navigation_bar_height_summary">Navigation Bar height while in portrait</string>
    <string name="navigation_bar_height_landscape_title">Navigation Bar height landscape</string>
    <string name="navigation_bar_height_landscape_summary">Navigation Bar height while in landscape</string>
    <string name="navigation_bar_width_title">Navigation Bar width</string>
    <string name="navigation_bar_width_summary">Navigation Bar height if the bar is along a side</string>
    <string name="navigation_bar_color_title">Navigation Bar color</string>
    <string name="navigation_bar_tint_title">Navigation Bar buttons color</string>
    <string name="navigation_bar_glow_tint_title">Navigation Bar glow color</string>
    <string name="navigation_bar_glow_tint_summary">Set the color of the glow that is displayed when you click a NavBar button</string>
    <string name="glow_times_title">Button glow animation time</string>
    <string name="navbar_widgets_title">Configure widgets</string>
    <string name="navigation_bar_menu_arrow_keys_title">Keyboard arrow keys</string>
    <string name="navigation_bar_menu_arrow_keys_summary">Checking this enables arrow keys in the Navigation Bar while typing</string>
    <string name="statusbar_hide_title">Hide Statusbar</string>
    <string name="statusbar_hide_summary">Checking this completely hides the Statusbar</string>
    <string name="navbar_hide_enable_title">Enable Hidden NavBar</string>
    <string name="drag_handle_opacity_title">Drag Handle Opacity</string>
    <string name="drag_handle_width_title">Drag Handle Width</string>
    <string name="title_navbar_timeout">Hidden NavBar Timeout</string>
    <string name="summary_navbar_timeout">Timeout time for Hidden NavBar Window</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="vibrations">Vibrations</string>
    <string name="title_animation_controls">Animations</string>
    <string name="ad_enable_title">Enable</string>
    <string name="ad_enable_summary_on">Active display enabled</string>
    <string name="ad_enable_summary_off">Active display disabled</string>
    <string name="ad_text_title">Notification text</string>
    <string name="ad_text_summary">Show the notification text around the ring.</string>
    <string name="ad_all_notifications_title">All notifications</string>
    <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
    <string name="ad_hide_low_priority_title">Hide low priority</string>
    <string name="ad_hide_low_priority_summary">Hide low priority notifications such as those from Google Now.</string>
    <string name="ad_pocket_mode_title">Pocket mode</string>
    <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
    <string name="ad_redisplay_title">Redisplay notifications</string>
    <string name="ad_customizations_title">Customizations</string>
    <string name="ad_excluded_apps_title">Excluded applications</string>
    <string name="ad_excluded_apps_summary">Excluded applications will not show up in active display.</string>
    <string name="ad_sunlight_mode_title">Sunlight mode</string>
    <string name="ad_sunlight_mode_summary">Invert the colors when in areas with bright light such as direct sunlight.</string>
    <string name="ad_brightness_title">Notification brightness</string>
    <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
    <string name="ad_show_date_title">Show date</string>
    <string name="ad_show_date_summary">Show the date above the clock</string>
    <string name="ad_show_ampm_title">Show AM/PM</string>
    <string name="ad_show_ampm_summary">Show AM/PM indicator next to time when using 12hour format</string>
</resources>