<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/active_display"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:romcontrol="http://schemas.android.com/apk/res/com.aokp.romcontrol">
    <SwitchPreference android:persistent="false" android:title="@string/ad_enable_title" android:key="ad_enable" android:summaryOn="@string/ad_enable_summary_on" android:summaryOff="@string/ad_enable_summary_off" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_text_title" android:key="ad_text" android:summary="@string/ad_text_summary" android:dependency="ad_enable" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_hide_low_priority_title" android:key="ad_hide_low_priority" android:summary="@string/ad_hide_low_priority_summary" android:dependency="ad_enable" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_all_notifications_title" android:key="ad_all_notifications" android:summary="@string/ad_all_notifications_summary" android:dependency="ad_enable" />
    <ListPreference android:persistent="false" android:entries="@array/ad_pocket_mode_entries" android:title="@string/ad_pocket_mode_title" android:key="ad_pocket_mode" android:summary="@string/ad_pocket_mode_summary" android:dependency="ad_enable" android:entryValues="@array/ad_pocket_mode_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_sunlight_mode_title" android:key="ad_sunlight_mode" android:summary="@string/ad_sunlight_mode_summary" android:dependency="ad_enable" />
    <ListPreference android:persistent="false" android:entries="@array/ad_redisplay_entries" android:title="@string/ad_redisplay_title" android:key="ad_redisplay" android:dependency="ad_enable" android:dialogTitle="@string/ad_redisplay_title" android:entryValues="@array/ad_redisplay_values" />
    <PreferenceCategory android:title="@string/ad_customizations_title" android:key="ad_customizations" />
    <com.aokp.romcontrol.fragments.AppMultiSelectListPreference android:persistent="false" android:title="@string/ad_excluded_apps_title" android:key="ad_excluded_apps" android:summary="@string/ad_excluded_apps_summary" android:dependency="ad_enable" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_show_date_title" android:key="ad_show_date" android:summary="@string/ad_show_date_summary" android:dependency="ad_enable" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ad_show_ampm_title" android:key="ad_show_ampm" android:summary="@string/ad_show_ampm_summary" android:dependency="ad_enable" />
    <com.aokp.romcontrol.widgets.SeekBarPreference android:persistent="false" android:max="100" android:title="@string/ad_brightness_title" android:key="ad_brightness" android:summary="@string/ad_brightness_summary" android:dependency="ad_enable" android:defaultValue="100" />
</PreferenceScreen>