<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/custom_carrier_label_title" android:key="custom_carrier_label" />
    <Preference android:title="@string/notification_wallpaper_title" android:key="notification_wallpaper" />
    <Preference android:title="@string/notif_wallpaper_alpha_title" android:key="notification_wallpaper_alpha" />
    <CheckBoxPreference android:title="@string/status_bar_notif_count_title" android:key="status_bar_notif_count" android:summary="@string/status_bar_notif_count_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/vibrate_notif_expand_title" android:key="vibrate_notif_expand" android:summary="@string/vibrate_notif_expand_summary" />
    <CheckBoxPreference android:title="@string/brightness_slider_title" android:key="statusbar_brightness_slider" android:summary="@string/brightness_slider_summary" />
    <CheckBoxPreference android:title="@string/statusbar_hide_title" android:key="statusbar_hidden" android:summary="@string/statusbar_hide_summary" />
    <CheckBoxPreference android:title="@string/ime_switcher_title" android:key="ime_switcher" android:summary="@string/ime_switcher_summary" android:defaultValue="true" />
</PreferenceScreen>