<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/spen_gestures_cat" android:key="spen_gestures">
        <CheckBoxPreference android:title="@string/spen_enable" android:key="enable_spen" android:summary="@string/spen_enable_summary" />
        <ListPreference android:title="@string/spen_left_title" android:key="spen_left" android:dependency="enable_spen" />
        <ListPreference android:title="@string/spen_right_title" android:key="spen_right" android:dependency="enable_spen" />
        <ListPreference android:title="@string/spen_up_title" android:key="spen_up" android:dependency="enable_spen" />
        <ListPreference android:title="@string/spen_down_title" android:key="spen_down" android:dependency="enable_spen" />
        <ListPreference android:title="@string/spen_double_title" android:key="spen_double" android:dependency="enable_spen" />
        <ListPreference android:title="@string/spen_long_title" android:key="spen_long" android:dependency="enable_spen" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/spen_extras_cat" android:key="spen_extras">
        <CheckBoxPreference android:title="@string/enable_stylus_pointer_title" android:key="enable_stylus pointer" android:summary="@string/enable_stylus_pointer_summary" />
    </PreferenceCategory>
</PreferenceScreen>